Fix small gap between header bar and nav menu on mobile when hamburger menu selected

--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ a:hover {
 @media (max-width: 700px) {
   .nav-links {
     position: absolute;
-    top: 3.2em;
+    top: 3.1em;
     right: 0;
     background: #fcf9f6;
     flex-direction: column;
